[design-system] import and variables visibility fix

--- a/packages/design-system/config/_variables.scss
+++ b/packages/design-system/config/_variables.scss
@@ -39,7 +39,7 @@ $colors: (
   "yellow": #FFD24C,
   "black": #000000,
   "red": #B23F35,
-  "green" #6B993D,
+  "green": #6B993D,
   "blue": #235789,
   "indigo": #242F40,
   "white": #FFFFFF,
