--- a/packages/project/scaffold/views/templates/homepage.twig
+++ b/packages/project/scaffold/views/templates/homepage.twig
@@ -1,7 +1,9 @@
-{% extends 'base.twig' %}
+{% extends '../base.twig' %}
+
+{% block meta %}
+<title>{{ title }}</title>
+{% endblock %}
 
 {% block content %}
-
 <h1>Homepage</h1>
-
 {% endblock %}
