--- a/packages/client/scaffold/client/styles/index.scss
+++ b/packages/client/scaffold/client/styles/index.scss
@@ -2,7 +2,7 @@
 /* VENDORS */
 /*=========*/
 @import '../../node_modules/minireset.css/minireset.css';
-@import '@fiad/design-system/';
+@import '@fiad/design-system';
 
 /*========*/
 /* GLOBAL */
