--- a/packages/client/scaffold/client/styles/global/_typography.scss
+++ b/packages/client/scaffold/client/styles/global/_typography.scss
@@ -2,6 +2,7 @@ html {
   text-size-adjust: none;
   text-rendering: optimizeLegibility;
   font-variant-ligatures: none;
+  color: map-get($colors, 'text-dark');
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
