--- a/packages/client/scaffold/client/styles/global/_typography.scss
+++ b/packages/client/scaffold/client/styles/global/_typography.scss
@@ -6,3 +6,8 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
