--- a/packages/client/scaffold/client/styles/global/_variables.scss
+++ b/packages/client/scaffold/client/styles/global/_variables.scss
@@ -51,7 +51,8 @@ $colors: (
 /*============*/
 /* TYPOGRAPHY */
 /*============*/
-$icon-font: 'icons';
+$font-default: sans-serif;
+$font-icons: 'icons';
 
 /*============*/
 /* ANIMATIONS */
