[client] basic styles update

--- a/packages/client/scaffold/client/styles/components/_button.scss
+++ b/packages/client/scaffold/client/styles/components/_button.scss
@@ -1,42 +1,10 @@
 .button {
   @extend %button;
-  border: solid 2px currentColor;
-  border-radius: rem($radius);
+  padding: rem($scalar) rem($scalar * 2);
+  border: solid 1px currentColor;
+  font-size: rem($scalar * 1.75);
   transition-property: background-color, border-color, color, opacity;
   transition-duration: $duration;
-}
-
-.button--primary {
-  background-color: map-get($colors, 'primary');
-  border-color: map-get($colors, 'primary');
-  color: map-get($colors, 'primary-contrast');
-
-  &:hover {
-    background-color: transparent;
-    color: map-get($colors, 'primary');
-  }
-}
-
-.button--secondary {
-  background-color: map-get($colors, 'secondary');
-  border-color: map-get($colors, 'secondary');
-  color: map-get($colors, 'secondary-contrast');
-
-  &:hover {
-    background-color: transparent;
-    color: map-get($colors, 'secondary');
-  }
-}
-
-.button--tertiary {
-  background-color: map-get($colors, 'tertiary');
-  border-color: map-get($colors, 'tertiary');
-  color: map-get($colors, 'tertiary-contrast');
-
-  &:hover {
-    background-color: transparent;
-    color: map-get($colors, 'tertiary');
-  }
 }
 
 .button--disabled,
@@ -45,7 +13,8 @@
   pointer-events: none !important;
 }
 
-.button_label {
+.button__label {
   flex-grow: 1;
+  text-transform: uppercase;
   text-align: center;
 }
