--- a/packages/project/scaffold/views/partials/cookies-banner.twig
+++ b/packages/project/scaffold/views/partials/cookies-banner.twig
@@ -1,3 +1,11 @@
-<div class="cookies-banner">
-
+<div class="cookies-banner visible">
+  <div class="container flex flex-align-center flex-justify-space-between">
+    <p class="p--small">
+      This website uses cookies. Please read the <a href="/privacy-policy" target="_blank">privacy policy</a> to learn more.
+    </p>
+    <div>
+      <button type="button" class="button">Accept</button>
+      <button type="button" class="button">Deny</button>
+    </div>
+  </div>
 </div>
