--- a/packages/project/scaffold/views/partials/footer.twig
+++ b/packages/project/scaffold/views/partials/footer.twig
@@ -1,3 +1,5 @@
 <footer class="footer">
-
+  <div class="container full-height flex flex-align-center flex-justify-space-between">
+    <p class="p--small">© All rights reserved</p>
+  </div>
 </footer>
