--- a/packages/project/scaffold/views/partials/header.twig
+++ b/packages/project/scaffold/views/partials/header.twig
@@ -1,3 +1,5 @@
-<header class="header{{ sticky ? ' header--sticky' : '' }}">
+<header class="header">
+  <div class="container full-height flex flex-align-center flex-justify-space-between">
 
+  </div>
 </header>
