--- a/packages/project/scaffold/views/templates/homepage.twig
+++ b/packages/project/scaffold/views/templates/homepage.twig
@@ -1,11 +1,9 @@
 {% extends '../base.twig' %}
 
-{% block meta %}
-<title>{{ title }}</title>
-{% endblock %}
+{% block meta %}{% endblock %}
 
 {% block content %}
 <div class="container">
-  <h1>Homepage</h1>
+  <h1>{{ title }}</h1>
 </div>
 {% endblock %}
