[client] toolbox integration

--- a/packages/client/scaffold/client/styles/index.scss
+++ b/packages/client/scaffold/client/styles/index.scss
@@ -10,6 +10,7 @@
 /*========*/
 @import 'global/variables';
 @import 'global/typography';
+@import 'global/unsupported';
 @import 'global/layout';
 
 /*============*/
