--- a/packages/project/scaffold/views/base.twig
+++ b/packages/project/scaffold/views/base.twig
@@ -24,6 +24,10 @@
 
   {# {% include './partials/cookies-banner.twig' %} #}
 
+  {# <div id="unsupported-message">
+    <h1>Unsupported browser</h1>
+  </div> #}
+
   <script src="assets/vendors.js"></script>
   <script src="assets/app.js"></script>
 
