--- a/packages/client/scaffold/client/styles/global/_variables.scss
+++ b/packages/client/scaffold/client/styles/global/_variables.scss
@@ -51,8 +51,10 @@ $colors: (
 /*============*/
 /* TYPOGRAPHY */
 /*============*/
-$font-default: sans-serif;
-$font-icons: 'icons';
+$fonts: (
+  'default': sans-serif,
+  icons: 'icons'
+);
 
 /*============*/
 /* ANIMATIONS */
