--- a/packages/client/scaffold/client/styles/index.scss
+++ b/packages/client/scaffold/client/styles/index.scss
@@ -9,6 +9,7 @@
 /* GLOBAL */
 /*========*/
 @import 'global/variables';
+@import 'global/helpers';
 @import 'global/typography';
 @import 'global/unsupported';
 @import 'global/layout';
