--- a/packages/client/scaffold/client/styles/global/_layout.scss
+++ b/packages/client/scaffold/client/styles/global/_layout.scss
@@ -1,11 +1,17 @@
+/*=========*/
+/* GENERAL */
+/*=========*/
 html {
   @include auto-scaling(375, 1440);
 }
 
 #content {
-  padding-top: rem(112);
+  padding-top: rem(112); // fixed header compensation
 }
 
+/*============*/
+/* CONTAINERS */
+/*============*/
 .container {
   padding: 0 1rem;
   position: relative;
@@ -26,6 +32,9 @@ html {
   height: 100%;
 }
 
+/*===============*/
+/* FLEX WRAPPERS */
+/*===============*/
 .flex {
   display: flex;
 }
@@ -68,4 +77,7 @@ html {
   "breakpoints": ("md")
 ));
 
+/*=============*/
+/* GRID SYSTEM */
+/*=============*/
 @include grid(12, rem($scalar), $breakpoints);
