--- a/packages/project/scaffold/views/base.twig
+++ b/packages/project/scaffold/views/base.twig
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#090D0F">
+
   <title>{{ title }}</title>
 
   {% block meta %}{% endblock %}
 
   <link rel="stylesheet" href="assets/app.css">
+  <link rel="icon" href="assets/images/favicon/icon.svg">
+  <link rel="mask-icon" href="assets/images/favicon/mask-icon.svg" color="#235789">
+  <link rel="apple-touch-icon" href="assets/images/favicon/apple-touch-icon.png">
 
   {% block head %}{% endblock %}
 </head>
