[client] base styles updated

--- a/packages/client/scaffold/client/styles/global/_layout.scss
+++ b/packages/client/scaffold/client/styles/global/_layout.scss
@@ -49,7 +49,7 @@ html {
     "start": flex-start,
     "end": flex-end
   ),
-  "breakpoints": ("md")
+  "breakpoints": $breakpoints
 ));
 
 @include framework-rules('flex', (
@@ -63,7 +63,7 @@ html {
     "start": flex-start,
     "end": flex-end
   ),
-  "breakpoints": ("md")
+  "breakpoints": $breakpoints
 ));
 
 @include framework-rules('flex', (
@@ -74,7 +74,7 @@ html {
     "col": column,
     "col-reverse": column-reverse,
   ),
-  "breakpoints": ("md")
+  "breakpoints": $breakpoints
 ));
 
 /*=============*/
