--- a/packages/client/scaffold/client/styles/global/_variables.scss
+++ b/packages/client/scaffold/client/styles/global/_variables.scss
@@ -1,3 +1,8 @@
+/*=======*/
+/* PATHS */
+/*=======*/
+$assets: '../../static';
+
 /*==========================*/
 /* SIZES AND RESPONSIVENESS */
 /*==========================*/
